...
	override var preferredStatusBarStyle: UIStatusBarStyle {
		return .lightContent
	}
	
	init() {
		super.init(nibName: nil, bundle: nil)
		title = "Search"
		tabBarItem = UITabBarItem(title: "Search", image: UIImage(named: "Search Tab"), selectedImage: nil)
	}
	
	required init?(coder aDecoder: NSCoder) {
		fatalError()
	}
...
		navigationItem.hidesSearchBarWhenScrolling = false
		
		searchController.searchResultsUpdater = searchResultsViewController
		searchController.searchBar.autocapitalizationType = .words
		searchController.dimsBackgroundDuringPresentation = true
		searchController.obscuresBackgroundDuringPresentation = true
		searchController.searchBar.placeholder = "Search All Cards"
		
		let instructionsLabel = UILabel()
		instructionsLabel.textAlignment = .center
		instructionsLabel.textColor = UIColor.white.withAlphaComponent(0.3)
		instructionsLabel.text = "Search for things like:"
		
...
